# pxr-trace

./: CMakeLists.txt  README.md  pch.h  pyproject-dev.toml  pyproject.toml
.github/actions/building-deps/: action.yml
.github/workflows/: pypi.yml
cmake/: pxr-trace-config.cmake.in
src/: CMakeLists.txt
src/pxr/trace/: aggregateNode.cpp  aggregateNode.h  aggregateTree.cpp  aggregateTree.h  aggregateTreeBuilder.cpp  aggregateTreeBuilder.h  api.h  category.cpp  category.h  collection.cpp  collection.h  collectionNotice.cpp  collectionNotice.h  collector.cpp  collector.h  concurrentList.h  counterAccumulator.cpp  counterAccumulator.h  dataBuffer.cpp  dataBuffer.h  detailedOverview.dox  dynamicKey.cpp  dynamicKey.h  event.cpp  event.h  eventContainer.cpp  eventContainer.h  eventData.cpp  eventData.h  eventList.cpp  eventList.h  eventNode.cpp  eventNode.h  eventTree.cpp  eventTree.h  eventTreeBuilder.cpp  eventTreeBuilder.h  jsonSerialization.cpp  jsonSerialization.h  key.cpp  (+23 more)
src/python/: CMakeLists.txt  __init__.py  __main__.py  module.cpp  wrapAggregateNode.cpp  wrapAggregateTree.cpp  wrapCollector.cpp  wrapReporter.cpp  wrapTestTrace.cpp
test/: CMakeLists.txt  testTrace.py  testTraceCategory.cpp  testTraceCounters.cpp  testTraceData.cpp  testTraceEventContainer.cpp  testTraceHash.cpp  testTraceMacros.cpp  testTraceMarkers.cpp  testTraceOverhead.cpp  testTraceRecursion.py  testTraceReportPerf.cpp  testTraceReporter.py  testTraceReporterLoadTrace.py  testTraceReports.py  testTraceSerialization.cpp  testTraceThreading.cpp  testWrapper.py
