[build-system]
requires = [
    "scikit-build-core",
    "pxr-arch-dev==25.8.*",
    "pxr-tf-dev==25.8.*",
    "pxr-js-dev==25.8.*",
    "pxr-boost-dev==25.8.*",
    "pxr-tbb-dev==2022.2.0.*"
]
build-backend = "scikit_build_core.build"

[project]
name = "pxr-trace"
version = "25.8"
description = "Performance tracking library used in OpenUSD"
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICENSE.txt", "NOTICE.txt"]
keywords = ["pixar", "open-usd"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
]
dependencies = [
    "pxr-arch==25.8.*",
    "pxr-tf==25.8.*",
    "pxr-js==25.8.*",
    "pxr-boost==25.8.*",
    "pxr-tbb==2022.2.0.*"
]

[project.urls]
Repository = "https://github.com/untwine/pxr-trace"

[tool.scikit-build]
cmake.version = ">=3.23,<4.2"
cmake.args = [
    "-DBUILD_TESTS=OFF",
    "-DBUILD_SHARED_LIBS=ON",
    "-DBUILD_PYTHON_BINDINGS=ON",
    "-DCMAKE_INSTALL_LIBDIR=pxr/.libs",
    "-DCMAKE_INSTALL_INCLUDEDIR=pxr-trace/include",
    "-DCMAKE_INSTALL_DATAROOTDIR=pxr-trace",
    "-DCMAKE_INSTALL_PYTHON_LIBDIR=.",

    # Required for std::variant (std::visit/get) on macOS
    "-DCMAKE_OSX_DEPLOYMENT_TARGET=10.13"
]
wheel.exclude = ["pxr-trace"]
sdist.exclude = ["test", ".github"]
